Fixes richtext focusMenu margin on firefox

--- a/static/less/richtext.less
+++ b/static/less/richtext.less
@@ -290,12 +290,6 @@
         float: left;
 
     }
-
-    @-moz-document url-prefix() {
-        .ProseMirror-menubar {
-            margin-top: -27px;
-        }
-    }
 }
 
 .ProsemirrorEditor {
